--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,6 @@ DerivedData
 *.ipa
 *.xcuserstate
 project.xcworkspace
-
 # Android/IntelliJ
 #
 build/
@@ -114,3 +113,6 @@ web-build/
 dist/
 
 # @end expo-cli
+
+google-services.json
+GoogleService-Info.plist
